# library-service

./: LICENSE  Makefile  README.md  app.py  config.yml  pyproject.toml
.github/workflows/: test.yml
docker/: Dockerfile  docker-compose.yml
docker/volumes/: .gitignore
kubernetes/library-service/: Chart.yaml
kubernetes/library-service/templates/: NOTES.txt
kubernetes/library-service/templates/tests/: test-connection.yaml
library_service/: main.py
library_service/dataaccess/object/: s3_object_store.py
library_service/dataaccess/sql/: postgres_sql_store.py
library_service/routers/: demo_router.py
resources/: library-service.drawio
