[tool.poetry]
name = "library-service"
version = "0.1.0"
description = "Library service for saving and loading state machines"
authors = ["Ethan Benabou <ethanbnb@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.73.0"
uvicorn = {extras = ["standard"], version = "^0.17.1"}
gunicorn = "^20.1.0"
boto3 = "^1.20.51"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
flake8 = "^4.0.1"
black = "^21.11b1"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
